[package]
name = "anni-fetch"
description = "A library focuses on what git fetch does."
authors = ["Yesterday17 <mmf@mmf.moe>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/project-anni/anni-fetch"
keywords = ["git"]

version = "0.2.0"
edition = "2018"

[dependencies]
ureq = "2"
miniz_oxide = "0.4.4"
sha-1 = "0.9.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "unpack_flutter_head"
harness = false
